add rute for assignment a proyect
